[package]
name = "rust_crypto_book_code"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
cbc = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
chacha20 = "0.9"
hkdf = "0.12.4"
sha2 = "0.10.9"
blake3 = "1.8.2"
poly1305 = "0.8.0"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
rsa = "0.9"
argon2 = "0.5"
scrypt = "0.11"
hmac = "0.12.1"
base64 = "0.22.1"
